fix: section spacing

--- a/src/containers/Homepage/components/SectionFeatures/SectionFeatures.module.scss
+++ b/src/containers/Homepage/components/SectionFeatures/SectionFeatures.module.scss
@@ -5,14 +5,16 @@
   grid-template-columns: 400px minmax(auto, 780px);
   align-items: center;
   justify-content: space-between;
-  margin-top: 170px;
+  margin-top: 220px;
 
   @include b-d(lg) {
     grid-template-columns: auto;
     row-gap: 60px;
+    margin-top: 175px;
   }
 
   @include b-d(md) {
     row-gap: 40px;
+    margin-top: 100px;
   }
 }
