--- a/src/containers/Homepage/components/SectionHowItWorks/SectionHowItWorks.module.scss
+++ b/src/containers/Homepage/components/SectionHowItWorks/SectionHowItWorks.module.scss
@@ -2,14 +2,17 @@
 
 .sectionHowItWorks {
   padding-top: 90px;
+  margin-top: 88px;
   background-color: $gray-100;
 
   @include b-btw(md, lg) {
     padding-top: 64px;
+    margin-top: 64px;
   }
 
   @include b-d(md) {
     padding-top: 48px;
+    margin-top: 84px;
     overflow: hidden;
   }
 }
@@ -74,7 +77,7 @@
 
   @include b-d(md) {
     padding-top: 54px;
-    padding-bottom: 48px;
+    padding-bottom: 54px;
   }
 }
 
